# rss-xml-to-markdown-converter

./: Cargo.toml  README.md  example.xml  xml_template.handlebars
examples/: example.xml  example_episode_output.md  example_input.md  example_input.xml  example_output.md  input_example.xml  output_example.xml
src/: main.rs  md_to_xml.rs  xml_definitions.rs  xml_to_md.rs  yml_definitions.rs
