[package]
name = "rss-xml-to-markdown-converter"
version = "0.1.0"
edition = "2021"
authors = [
  "Daniel del Castillo <delcastillodelarosadaniel@gmail.com>",
  "J. Daniel Escánez <jdanielescanez@gmail.com>",
  "Leto Rodríguez <leto4100@gmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde-xml-rs = "0.5.1"
serde_yaml = "0.8.24"
clap = { version = "3.1.17", features = ["derive"] }
